# study

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: main.cpp
tests/: test_mylib.cpp
